--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,8 +4,11 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./.volumes/postgres/data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=k-cards
+
+volumes:
+  postgres_data:
