agrego cors a la api para que se puede ejecutar el frontend si ambos estan en localhost

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/belenajnota/tpFinal_IDS#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.16.3"
   },
