--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=k-cards
+
+  frontend:
+    image: nginx:alpine
+    ports:
+      - "8080:80"
+    volumes:
+      - ../frontend/k-card-inicio:/usr/share/nginx/html:ro
