--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "http-server": "^14.1.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
