--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,3 +9,6 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=k-cards
+
+volumes:
+  postgres_data:
